# sopds-modern

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  DEPLOY.md  Dockerfile  License_RUS  README.md  README_RUS.md  TODO.txt  base.env  docker-compose.yml  justfile  pyproject.toml  raspberry.txt  version.txt
.gitea/workflows/: ci.yml
compose/foundation/: Dockerfile
compose/production/: Dockerfile
docs/: deploy.md  migration.md  upgrade.md
scripts/: check-systemd.sh  create_key.sh  docker_entrypoint.sh  release.sh  sopds.service  start_server.sh
sopds/: settings.py
src/: compile_messages.py  manage.py
src/book_tools/: exceptions.py  mime_detector.py  services.py
src/convert/: fb2_to_html.py
src/fb2_data/: config.json  genres.xml
src/fb2parser_core/: __init__.py  author_normalizer_extended.py  author_pipeline_service.py  author_processor.py  author_utils.py  auto_compile_service.py  block_level_pattern_matcher.py  extraction_constants.py  fb2_author_extractor.py  fb2_compiler.py  fb2_sax_extractor.py  fb2_utils.py  folder_classifier.py  gender_lookup.py  genre_assign.py  genres_manager.py  logger.py  metadata_cache.py  name_normalizer.py  pattern_converter.py  precache.py  regen_csv.py  series_helpers.py  series_normalizer.py  series_processor.py  settings_manager.py  structural_block_analyzer.py  synchronization.py
src/fb2parser_web/: apps.py  fb2parser_bridge.py  job_state.py  urls.py  views.py
src/inpx/: inp_parser.py
src/opds_catalog/: admin.py  apps.py  decorators.py  dl.py  fb2parse.py  feeds.py  inpx_parser.py  middleware.py  models.py  opds_paginator.py  opdsdb.py  settings.py  sopds_config.py  sopdscan.py  urls.py  utils.py  zipf.py
src/sopds/: asgi.py
src/sopds_web_backend/: models.py  processors.py  urls.py  views.py
tasks/: overall_optimization_plan.md  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md
tasks/book_tools/: optimization_dependencies.md  optimization_exceptions.md  optimization_format.md  optimization_performance.md  optimization_services.md
tasks/opds_catalog/: apps_optimization.md  decorators_optimization.md  feeds_optimization.md  middleware_optimization.md  models_optimization.md  opds_paginator_optimization.md  opdsdb_optimization.md  package_optimization.md  services_optimization.md  urls_optimization.md  utils_optimization.md  views_optimization.md
tasks/sopds_web_backend/: admin_optimization.md  apps_optimization.md  models_optimization.md  package_optimization.md  urls_optimization.md  (+4 more)
tests/: conftest.py  helpers.py
(+246 files in other folders)
