[project]
name = "sopds-ng"
version = "1.0.0RC1"
description = "New generation of Simple OPDS catalog"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "apscheduler==3.11",
    "chardet>=5.2.0",
    "django==5.2",
    "django-constance[database]==4.3.2",
    "django-environ==0.12",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "pillow>=2.9.0",
    "psycopg[binary]==3.2.6",
    "pymemcache==4",
    "python-telegram-bot==22",
    "whitenoise==6.11",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==5.2.0",
    "django-stubs==5.1",
    "faker>=38.2.0",
    "lxml-stubs>=0.5.1",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.2.2",
    "pytest-cov==7.0",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.8.1",
    "refurb>=2.2.0",
    "ruff>=0.11.0",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]

testpaths = ["tests/unit", "tests/integration", "tests/acceptance"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: this test is slow",
    "optional: marks test as optional",
    "benchmark: this test is benchmark",
    "unit: unit test (no dependencies)",
    "integration: integration test (DB, FS, network)",
    "acceptance: acceptance test (HTTP client, full stack)",
]

[tool.coverage.run]
relative_files = true
omit = [
    "manage.py",
    "*/migrations/*",
    "*/sopds/*",
    "src/inpx/*",
    "*/zipf*",
    "*/fb2parse*",
    "*/pymobi*",
]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover"]

[tool.mypy]
warn_unused_configs = true
warn_return_any = false
ignore_missing_imports = true
mypy_path = "src/"
check_untyped_defs = true
# follow_imports = "skip" — убрано, mypy теперь видит типы из импортов
no_implicit_optional = true
disable_error_code = [
    "no-redef",
    "var-annotated",
    "assignment",
    "override",
    "misc",
    "return",
    "abstract",
    "has-type",
    "attr-defined",
    "union-attr",
    "annotation-unchecked",
    "return-value",
    "arg-type",
    "index",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = [
    "E722",
    "E501",
    "E741",
    "E712",
    "E711",
    "F401",
    "F841",
    "F405",
    "F821",
    "F403",
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["F403"]
"tests/**/*.py" = ["F401", "F811"]
